java/java-tests/testData/codeInsight/daemonCodeAnalyzer/lambda/highlighting/VariableInitialization.java
class Test1 {
    {
        Runnable r = () -> { <error descr="Variable 'r' might not have been initialized">r</error>.run(); };
    }
}